<resources>
    <string name="app_name">NfcHceNdefRealSender</string>
    <string name="servicedesc">NFC HCE NDEF REAL Service</string>
    <string name="aiddescription">NFC HCE NDEF REAL NFC AID</string>
    <string name="header">Emulate an NFC Forum class 4 type tag with a NDEF message.\nTo read the message you need a separate reader app running on a second device.</string>
    <string name="description">This example emulates an NDEF record (RTD_TEXT). It uses the aid-filter D2760000850101 for the APDU SELECT command.\nAn actual timestamp will be added to your message.</string>
    <string name="set_ndef_button">Set NDEF Text</string>
    <string name="set_ndef100_button">set NDEF text with 100 characters</string>
    <string name="set_ndef500_button">set NDEF text with 500 characters</string>
    <string name="nfc_result">NFC result</string>
    <string name="plainText">Enter plain text for NDEF</string>
</resources>